plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'team.three.usedstroller'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //spring
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    //jjwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //자바 역 직렬화 문제 해결 패키지
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    //db
    implementation 'org.postgresql:postgresql'

    //queryDsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    //swagger address : {ip:port}/swagger-ui/index.html
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    implementation 'com.google.code.gson:gson:2.10.1' // 최신 버전 확인
    //socket io
    implementation 'com.corundumstudio.socketio:netty-socketio:2.0.0' // Socket.IO 3.x 서버 라이브러리
    implementation 'io.socket:socket.io-client:2.1.0' // Socket.IO 클라이언트 2.x
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // web client
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    //test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
//    runtimeOnly 'com.h2database:h2'
    testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
    useJUnitPlatform()
}

jar {
    enabled = false
}

// QueryDsl 빌드 옵션
def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile

// SourceSet에 querydslDir을 추가
sourceSets {
    main.java.srcDirs += [ querydslDir ]
}

// JavaCompile 작업에서 annotationProcessor 설정
tasks.withType(JavaCompile).configureEach {
    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
}

// clean 작업 시 생성된 QueryDSL 디렉토리 삭제
tasks.named('clean') {
    doLast {
        delete querydslDir
    }
}